--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <title>My blog</title>
+    <title>Karina's Blog</title>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
+    <img 
+    <h1>Karina ora Taiao! (Hello World!)</h1> 
     <p> This is the beginning of my website home page.</p>
     <p> It will eventually contain a list of links to all my blogs. </p>
   </body>
