Create and update to html css files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Karina's Blog</title>
+    <meta charset="UTF-8">
+    <link href="index.css" rel="stylesheet" type="text/css">
+  </head>
+
   <body>
-    <img 
-    <h1>Karina ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <!-- header starts here-->
+
+    <div class="header">
+      <ul class="menu-item">
+        <li>
+          <a href="#">Main</a>
+          </li>
+        <li>
+          <a href="#">About</a>
+            </li>
+        <li class="logo">Karina Mota</li>
+        <li>
+          <a href="#">Feedback</a>
+              </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+      </ul>
+      <!-- header ends here-->
+    </div>
+
+    <div class="photo-main-page">
+    <img src="Photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota>"
+    </div> 
+
+    <!--description starts here-->
+    <h2>Kia ora!</h2> 
+    <p> This is the beginning of my web development career<br>
+        and I would like your help to become a <strong>pro</strong>
+    </p>
+ 
+    <p> I hope you enjoy your <em>stay!</em></p>
+
+    <!--description ends here-->
   </body>
 </html>
