--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Karina's Blog</title>
+    <title>Karina's Website</title>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <!-- header starts here-->
 
-    <div class="header">
-      <ul class="menu-item">
-        <li>
-          <a href="#">Main</a>
-          </li>
-        <li>
-          <a href="#">About</a>
-            </li>
-        <li class="logo">Karina Mota</li>
-        <li>
-          <a href="#">Feedback</a>
-              </li>
-        <li>
-          <a href="#">Blog</a>
-        </li>
-      </ul>
-      <!-- header ends here-->
+    <div class="logo">
+      <p>Karina Mota</p>
+
     </div>
+
+    <div class="nav">
+      <ul>
+        <li class="home"><a href="#">Home</a></li>
+        <li class="about"><a href="#">About</a></li>
+        <li class="blog"><a href="#">Blog</a></li>
+        <li class="feedback"><a href="#">Feedback</a></li>
+      </ul>
+    </div>
+
+
 
     <div class="photo-main-page">
     <img src="Photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota>"
@@ -35,7 +35,7 @@
     <!--description starts here-->
     <h2>Kia ora!</h2> 
     <p> This is the beginning of my web development career<br>
-        and I would like your help to become a <strong>pro</strong>
+        and I would like your help to become a <strong>pro</strong>.<br>
     </p>
  
     <p> I hope you enjoy your <em>stay!</em></p>
