--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
 
     <div class="nav">
       <ul>
-        <li class="home"><a href="#">Home</a></li>
-        <li class="about"><a href="about.html">About</a></li>
+        <li class="home"><a href="index.html">Home</a></li>
+        <li class="about"><a href="#">About</a></li>
         <li class="blog"><a href="blog.html">Blog</a></li>
         <li class="feedback"><a href="feedback.html">Feedback</a></li>
       </ul>
