--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Karina's Website</title>
+    <title>Karina's Blog</title>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
@@ -19,9 +19,9 @@
 
     <div class="nav">
       <ul>
-        <li class="home"><a href="#">Home</a></li>
+        <li class="home"><a href="index.html">Home</a></li>
         <li class="about"><a href="about.html">About</a></li>
-        <li class="blog"><a href="blog.html">Blog</a></li>
+        <li class="blog"><a href="#">Blog</a></li>
         <li class="feedback"><a href="feedback.html">Feedback</a></li>
       </ul>
     </div>
