--- a/feedback.html
+++ b/feedback.html
@@ -19,10 +19,10 @@
 
     <div class="nav">
       <ul>
-        <li class="home"><a href="#">Home</a></li>
+        <li class="home"><a href="index.html">Home</a></li>
         <li class="about"><a href="about.html">About</a></li>
         <li class="blog"><a href="blog.html">Blog</a></li>
-        <li class="feedback"><a href="feedback.html">Feedback</a></li>
+        <li class="feedback"><a href="#">Feedback</a></li>
       </ul>
     </div>
 
