Add text about page

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="about.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
 
@@ -27,18 +27,33 @@
     </div>
 
 
-
-    <div class="photo-main-page">
-    <img src="Photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota>"
+    
+    <div class="photo-about">
+      <img src="Photos/spotlight-about.JPG" alt="Spotlight by Karina Mota">
     </div> 
 
     <!--description starts here-->
-    <h2>Kia ora!</h2> 
-    <p> This is the beginning of my web development career<br>
-        and I would like your help to become a <strong>pro</strong>.<br>
+  <div>
+    <h2>Olá!</h2>
+    <p> Welcome to my first and foremost webpage.</p>
+    <p>
+      I've set myself a challenge to learn how to code.<br>
+      I believe we are able to learn anything as long as
+      we are passionate, dedicated and believe in ourselves.<br>
+    </p>
+    <span>
+      I wasn't sure I would be passionate about coding,
+      but as it turns out, I'm really enjoying this new path.</span>
+    </p>
+
+    <p>In this page I'll write a bit about my journey,
+      about myself, my strength and my weaknesses.</p>
+    <p>I'll also write about what I'm doing to improve
+      as a coder and as a person.
     </p>
  
-    <p> I hope you enjoy your <em>stay!</em></p>
+    <p><em>Aroha mai, aroha atu</p>
+  </div>  
 
     <!--description ends here-->
   </body>
