--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="feedback.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
 
@@ -33,13 +33,33 @@
     </div> 
 
     <!--description starts here-->
-    <h2>Kia ora!</h2> 
+    <!--<h2>Kia ora!</h2> 
     <p> This is the beginning of my web development career<br>
         and I would like your help to become a <strong>pro</strong>.<br>
     </p>
  
-    <p> I hope you enjoy your <em>stay!</em></p>
+    <p> I hope you enjoy your <em>stay!</em></p>-->
 
     <!--description ends here-->
+
+    <!--form starts here-->
+    <p>
+      <form action="/https://docs.google.com/document/d/1_mM0OUznaBico4C0251NNJRMuWsFaDYC710VG4fTg58/edit">
+        <fieldset>
+          <legend>Feedback:</legend>
+          <input type="radio" name="example" value="yes" checked> Yes<br>
+        <input type="radio" name="example" value="no"> No<br>
+        <p>
+        <textarea name="comment" rows="5" cols="50">
+          Comment</textarea>
+        </p>
+        <p>
+          <button type="submit">Submit</button>
+        </p>
+        </fieldset>
+      </form>
+    </p>
+
+    <!--form ends here-->
   </body>
 </html>
