--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li class="home"><a href="#">Home</a></li>
         <li class="about"><a href="about.html">About</a></li>
         <li class="blog"><a href="blog.html">Blog</a></li>
-        <li class="feedback"><a href="feedback.html">Feedback</a></li>
+        <!--<li class="feedback"><a href="feedback.html">Feedback</a></li>-->
       </ul>
     </div>
 
