--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-    <link href="/Users/karina/Documents/Dev-Academy/karina-mota.github.io/karina-mota.github.io/styles/index.css" rel="stylesheet" type="text/css">
+    <link href="/styles/index.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
 
@@ -20,8 +20,8 @@
     <div class="nav">
       <ul>
         <li class="home"><a href="#">Home</a></li>
-        <li class="about"><a href="about.html">About</a></li>
-        <li class="blog"><a href="blog.html">Blog</a></li>
+        <li class="about"><a href="/blog/about.html">About</a></li>
+        <li class="blog"><a href="/blog/tecnical-blog.html">Blog</a></li>
         <!--<li class="feedback"><a href="feedback.html">Feedback</a></li>-->
       </ul>
     </div>
@@ -29,7 +29,7 @@
 
 
     <div class="photo-main-page">
-      <img src="/Users/karina/Documents/Dev-Academy/karina-mota.github.io/karina-mota.github.io/Photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota"> 
+      <img src="/Photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota"> 
     </div> 
 
     <!--description starts here-->
