--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul>
         <li class="home"><a href="#">Home</a></li>
         <li class="about"><a href="/blog/about.html">About</a></li>
-        <li class="blog"><a href="/blog/tecnical-blog.html">Blog</a></li>
+        <li class="blog"><a href="/blog/technical-blog.html">Blog</a></li>
         <!--<li class="feedback"><a href="feedback.html">Feedback</a></li>-->
       </ul>
     </div>
