--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="nav">
       <ul>
         <li class="home"><a href="#">Home</a></li>
-        <li class="about"><a href="./blog/about.html">About</a></li>
-        <li class="blog"><a href="./blog/technical-blog.html">Blog</a></li>
+        <li class="about"><a href="blog/about.html">About</a></li>
+        <li class="blog"><a href="blog/technical-blog.html">Blog</a></li>
         <!--<li class="feedback"><a href="feedback.html">Feedback</a></li>-->
       </ul>
     </div>
@@ -29,7 +29,7 @@
 
 
     <div class="photo-main-page">
-      <img src="./photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota"> 
+      <img src="photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota"> 
     </div> 
 
     <!--description starts here-->
