Change photo to Photo index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <div class="photo-main-page">
-      <img src="photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota"> 
+      <img src="Photos/auckland-bw.jpg" alt="Auckland's Skylight by Karina Mota"> 
     </div> 
 
     <!--description starts here-->
